(library
 (name portaudio_bindings_ffi)
 (public_name ocaml_portaudio.bindings.ffi)
 (modules portaudio_bindings_ffi)
 (libraries portaudio_types))

(executable
 (name stubgen)
 (modules stubgen)
 (libraries portaudio_bindings_ffi portaudio_types ctypes.stubs ctypes))

(rule
 (targets ml_stubs.ml)
 (deps (:stubgen stubgen.exe))
 (action (with-stdout-to %{targets} (run %{stubgen} -ml))))

(rule
 (targets c_stubs.c)
 (deps (:stubgen stubgen.exe))
 (action (with-stdout-to %{targets} (run %{stubgen} -c))))

(library
 (name portaudio_ffi)
 (public_name ocaml_portaudio.ffi)
 (modules portaudio_ffi ml_stubs)
 (foreign_stubs (language c) (names c_stubs))
 (libraries portaudio_bindings_ffi ctypes.stubs ctypes)
 (c_library_flags -lportaudio)
 )
